<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/list_item_height"
    android:orientation="vertical"
    tools:context="com.example.android.music.MainActivity"
    tools:ignore="Overdraw">

    <!-- Without the below layout, this whole layout would not work, it is not 'useless'-->
    <!--Hence, the tools : ignore useless parent attribute.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_background_light"
        android:orientation="vertical"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        tools:ignore="UselessParent">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="5dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/queen"
                style="@style/ArtistStyle"
                android:text="@string/artist_queen" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="5dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/michaelJackson"
                style="@style/ArtistStyle"
                android:text="@string/artist_michaelJackson" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="5dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/davidBowie"
                style="@style/ArtistStyle"
                android:text="@string/artist_davidBowie" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="5dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/gnr"
                style="@style/ArtistStyle"
                android:text="@string/artist_gnr" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="5dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/madonna"
                style="@style/ArtistStyle"
                android:text="@string/artist_madonna" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>